<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bam.olevel.vica.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/fileNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name_tv"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="48dp" />

    <TextView
        android:id="@+id/fileName"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:text="@string/file_name"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/fileNameTV"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fileNameTV"/>


    <TextView
        android:id="@+id/fileDescriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_description_tv"
        app:layout_constraintRight_toRightOf="@+id/fileNameTV"
        tools:layout_editor_absoluteY="44dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fileDescription"/>


    <TextView
        android:id="@+id/fileDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/file_description"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/fileName"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/fileName" />


    <TextView
        android:id="@+id/settingStartTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_start_tv"
        app:layout_constraintRight_toRightOf="@+id/fileDescriptionTV"
        app:layout_constraintBaseline_toBaselineOf="@+id/settingStart"/>


    <TextView
        android:id="@+id/settingStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_start"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/fileDescription"
        app:layout_constraintLeft_toLeftOf="@+id/fileDescription"/>

    <TextView
        android:id="@+id/settingStopTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_stop_tv"
        app:layout_constraintRight_toRightOf="@+id/settingStartTV"
        app:layout_constraintBaseline_toBaselineOf="@+id/settingStop"/>


    <TextView
        android:id="@+id/settingStop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_stop"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/settingStart"
        app:layout_constraintLeft_toLeftOf="@+id/settingStart"/>

    <TextView
        android:id="@+id/settingDurationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_duration_tv"
        app:layout_constraintRight_toRightOf="@+id/settingStopTV"
        app:layout_constraintBaseline_toBaselineOf="@+id/settingDuration"/>


    <TextView
        android:id="@+id/settingDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_duration"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/settingStop"
        app:layout_constraintLeft_toLeftOf="@+id/settingStop"/>


    <TextView
        android:id="@+id/commentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_tv"
        app:layout_constraintRight_toRightOf="@+id/settingDurationTV"
        app:layout_constraintBaseline_toBaselineOf="@+id/comment"/>


    <TextView
        android:id="@+id/comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/settingDuration"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/settingDuration" />



</android.support.constraint.ConstraintLayout>
